2004-06-24 Hoda Amer
	A small fix to the New Class Wizard "link to file" option.
	
2004-06-24 Chris Wiebe
	Fix for PR 48783 : [New Class Wizard] Err Create C++ Class with "Link to  File" checkbox selected
	Fix for PR 47571 : [New Class Wizard] resolved location can be blanked
	Fix for PR 48774 : [New Class Wizard] Error if Create C++ Class with no name
	
2004-06-23 Tanya Wolff
	Fix for bugs 66134,66145
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathEntryMessages.properties
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathIncludeSymbolEntryPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/NewWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/dialogfields/LinkToFileGroup.java
	
2004-06-23 Tanya Wolff
	Fix for Bug 66300 - i18n: File Types preferences buttons don't expand
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferences.java

2004-06-21 Alain Magloire

	It is too late to change the icons, but still
	make a difference in a CFolder(CContainer) and
	a normal folder.
	* icons/full/obj16/sroo_obj.gif
	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java
	* src/org/eclipse/cdt/internal/ui/CElementImageProvider.java
	* src/org/eclipse/cdt/internal/ui/CPluginImages.java

2004-06-22 Tanya Wolff
	Fix for Bug 49883:  duplicate mnemonics on editor preferences page.
	Also flipped label/checkbox presentation for "bold" so the mnemonic would work. 
	Removed unneeded keys.
	
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties		

2004-06-22 Bogdan Gheorghe
	Fix for 68028: Open Declaration into closed project causes PartInitException
	
	* src/org/eclipse/cdt/internal/ui/util/EditorUtility.java
	* src/org/eclipse/cdt/internal/ui/util/OpenIncludeAction.java
	
 
2004-06-21 Bogdan Gheorghe
	Fixed opening search external markers.

2004-06-21 Alain Magloire

	Big Patch from Vladimir Hirsl