@@ -156,6 +156,16 @@ CreateLinkedResourceGroup.resolvedPathLabel=Resolved Location:
 CreateLinkedResourceGroup.browseButton=Browse...
 CreateLinkedResourceGroup.variablesButton=Variables...
 CreateLinkedResourceGroup.open=Open
+CreateLinkedResourceGroup.targetSelectionLabel= Select the link target.
+CreateLinkedResourceGroup.linkTargetNotFile= Link target must be a file
+CreateLinkedResourceGroup.linkTargetNotFolder= Link target must be a folder
+CreateLinkedResourceGroup.linkTargetNonExistent= Link target does not exist
+CreateLinkedResourceGroup.linkTargetEmpty = Link target must be specified
+CreateLinkedResourceGroup.linkTargetInvalid = Link target name is invalid
+CreateLinkedResourceGroup.linkTargetNotAbsolute = Link target must be absolute path or path variable and relative path.
+
+
+
 
 NewClassWizardPage.error.EnterClassName=Class name is empty.
 NewClassWizardPage.error.ClassNameExists=Class already exists.
